--- a/index.html
+++ b/index.html
@@ -1,45 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body class="open-sans-normal">
-    <header>
-        <nav>
-            <h2 class="nav-title dark1">Ma<span class="primaryColor">r</span>y</h2>
-            <ul>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href=""><button>Hire Me</button></a></li>
-            </ul>
-        </nav>
-        <div class="banner">
-
-            <div class="collom1">
-                <h2>Hi, I'm</h2>
-                <h1>Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button>Download CV</button>
-                <button>Contact</button>
-            </div>
-
-            <div class="collom2">
-                <img src="images/hardy.png" alt="">
-            </div>
-            
-        </div>
-    </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
